[tool.poetry]
name = "bp-electric"
version = "0.1.0"
description = ""
authors = ["Satan1437 <exemplles.white@gmail.com>"]
readme = "README.md"
packages = [{include = "bp_electric"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
